examples/test/testpolicy5870.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5870
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key21: value41
      key45: value0
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value20
      podSelector:
        matchLabels:
          key20: value35
